--- a/tiaozhanchengxusheji/部分和问题.md
+++ b/tiaozhanchengxusheji/部分和问题.md
@@ -1,3 +1,4 @@
+简单的dfs  
 ## 题目描述
 
 ![image](https://github.com/liusiqincoder/-oj-/blob/master/tiaozhanchengxusheji/picture/%E9%83%A8%E5%88%86%E5%92%8C%E9%97%AE%E9%A2%98.png)
